--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-requests==2.24.0
-Flask==1.1.2
 tensorflow==2.3.0
 streamlit==0.71.0
 pandas==1.1.2
+pandas_datareader==0.9.0
 numpy==1.18.5
 scikit-learn==0.23.2
+altair==4.1.0
